// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading> renders 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      body={true}
      caption={false}
      ellipsizeMode="tail"
      headline={true}
      level={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -3.7,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 10,
          },
        ]
      }
      subtitle={false}
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  />
</View>
`;

exports[`<Heading> when {breadcrumbs} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      body={true}
      caption={false}
      ellipsizeMode="tail"
      headline={true}
      level={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -3.7,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 10,
          },
        ]
      }
      subtitle={false}
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        href="/"
        level={2}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "color": "#9b9b9b",
              "marginRight": 4,
            },
          ]
        }
        subtitle={false}
      >
        Turismo ·
      </Text>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        href="/"
        level={2}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "color": "#9b9b9b",
              "marginRight": 4,
            },
          ]
        }
        subtitle={false}
      >
        Gran Bretaña ·
      </Text>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        href="/"
        level={2}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "color": "#9b9b9b",
              "marginRight": 4,
            },
          ]
        }
        subtitle={false}
      >
        Inglaterra ·
      </Text>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        href="/"
        level={2}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 24,
            },
            false,
            Object {
              "color": "#9b9b9b",
              "marginRight": 4,
            },
          ]
        }
        subtitle={false}
      >
        Londres
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Heading> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      body={true}
      caption={false}
      ellipsizeMode="tail"
      headline={true}
      level={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -3.7,
            "lineHeight": 60,
          },
          false,
          Object {
            "color": "#424242",
            "marginRight": 10,
          },
        ]
      }
      subtitle={false}
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  />
</View>
`;

exports[`<Heading> when {column} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={Object {}}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      body={true}
      caption={false}
      ellipsizeMode="tail"
      headline={true}
      level={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -3.7,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 10,
          },
        ]
      }
      subtitle={false}
    >
      Hello World
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 2.5,
            },
          ]
        }
        subtitle={false}
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 2.5,
            },
          ]
        }
        subtitle={false}
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 2.5,
            },
          ]
        }
        subtitle={false}
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 2.5,
            },
          ]
        }
        subtitle={false}
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 2.5,
            },
          ]
        }
        subtitle={false}
      >
        ☆
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={true}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12,
              "lineHeight": 16,
            },
            false,
            Object {},
          ]
        }
        subtitle={false}
      >
         4.5/5
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={true}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12,
              "lineHeight": 16,
            },
            false,
            Object {},
          ]
        }
        subtitle={false}
      >
         (12 valoraciones)
      </Text>
    </View>
  </View>
  <View
    style={Object {}}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "minHeight": 20,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={true}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12,
              "lineHeight": 16,
            },
            false,
            Object {},
          ]
        }
        subtitle={false}
      >
        128
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={true}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12,
              "lineHeight": 16,
            },
            false,
            Object {},
          ]
        }
        subtitle={false}
      >
         colaborators
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/8",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/16",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/32",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Heading> when {contributors} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      body={true}
      caption={false}
      ellipsizeMode="tail"
      headline={true}
      level={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -3.7,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 10,
          },
        ]
      }
      subtitle={false}
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={true}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12,
              "lineHeight": 16,
            },
            false,
            Object {},
          ]
        }
        subtitle={false}
      >
        128
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={true}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12,
              "lineHeight": 16,
            },
            false,
            Object {},
          ]
        }
        subtitle={false}
      >
         colaborators
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/8",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/16",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://api.adorable.io/avatars/48/32",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
                false,
                Object {
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                Object {
                  "marginLeft": 5,
                },
              ]
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Heading> when {rating} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      body={true}
      caption={false}
      ellipsizeMode="tail"
      headline={true}
      level={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -3.7,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 10,
          },
        ]
      }
      subtitle={false}
    >
      Hello World
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 2.5,
            },
          ]
        }
        subtitle={false}
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 2.5,
            },
          ]
        }
        subtitle={false}
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 2.5,
            },
          ]
        }
        subtitle={false}
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 2.5,
            },
          ]
        }
        subtitle={false}
      >
        ★
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={false}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 16,
              "lineHeight": 30,
            },
            false,
            Object {
              "marginRight": 2.5,
            },
          ]
        }
        subtitle={false}
      >
        ☆
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={true}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12,
              "lineHeight": 16,
            },
            false,
            Object {},
          ]
        }
        subtitle={false}
      >
         4.5/5
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        body={true}
        caption={true}
        ellipsizeMode="tail"
        headline={false}
        level={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12,
              "lineHeight": 16,
            },
            false,
            Object {},
          ]
        }
        subtitle={false}
      >
         (12 valoraciones)
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  />
</View>
`;

exports[`<Heading> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      body={true}
      caption={false}
      ellipsizeMode="tail"
      headline={true}
      level={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -3.7,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 10,
          },
        ]
      }
      subtitle={false}
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  />
</View>
`;

exports[`<Heading> when {title} 1`] = `
<View
  style={
    Array [
      Object {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      body={true}
      caption={false}
      ellipsizeMode="tail"
      headline={true}
      level={2}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontFamily": undefined,
            "fontSize": 60,
            "fontWeight": "700",
            "letterSpacing": -3.7,
            "lineHeight": 60,
          },
          false,
          Object {
            "marginRight": 10,
          },
        ]
      }
      subtitle={false}
    >
      Hello World
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "minHeight": 20,
      }
    }
  />
</View>
`;
